--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </form>
         
     </div>
-    <table class="table-content">
+    <table class="table-content" id="myTable">
         <thead>
             <tr>
                 <th>Employee Name</th>
@@ -36,7 +36,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr>
+            <!-- <tr>
                 <td>Rojames Binoya</td>
                 <td>2024-03-17</td>
                 <td>Approved</td>
@@ -44,8 +44,9 @@
                     <button class="btn btn-danger">Remove</button>
                     <button class="btn btn-primary">Edit</button>
                 </td>
-            </tr>
+            </tr> -->
         </tbody>
     </table>
 </body>
+<script src="./js/utils.js"></script>
 </html>
