Adding insert function

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
         <h2>Coaching Appointment</h2>
     </div>
     <div class="content">
-        <form action="" class="form-content">
+        <form action="" class="form-content" id="appointmentForm">
             <label for="name" class="form-label">Employee Name: </label>
-            <input type="text" class="form-input">
+            <input type="text" class="form-input name">
             <label for="date" class="form-label">Appointment Date: </label>
-            <input type="date" class="form-input">
+            <input type="date" class="form-input date">
             <label for="status" class="form-label">Appointment Status: </label>
-            <select name="status" class="form-input">
+            <select name="status" class="form-input status">
                 <option value="" selected hidden>Select Status</option>
                 <option value="Approved">Approved</option>
                 <option value="Pending">Pending</option>
