Added some validation

--- a/index.html
+++ b/index.html
@@ -36,17 +36,9 @@
             </tr>
         </thead>
         <tbody>
-            <!-- <tr>
-                <td>Rojames Binoya</td>
-                <td>2024-03-17</td>
-                <td>Approved</td>
-                <td>
-                    <button class="btn btn-danger">Remove</button>
-                    <button class="btn btn-primary">Edit</button>
-                </td>
-            </tr> -->
         </tbody>
     </table>
 </body>
+<script src="./js/validations.js"></script>
 <script src="./js/utils.js"></script>
 </html>
