Added fetch data function upon clicking edit button from table

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <option value="Approved">Approved</option>
                 <option value="Pending">Pending</option>
             </select>
-            <button type="submit" class="btn btn-primary">Add Appointment</button>
+            <button type="submit" class="btn btn-primary btnAddOrUpdate">Add Appointment</button>
         </form>
         
     </div>
