--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
                 <option value="Approved">Approved</option>
                 <option value="Pending">Pending</option>
             </select>
+            <input type="text" class="index-holder" hidden>
             <button type="submit" class="btn btn-primary btnAddOrUpdate">Add Appointment</button>
+            <button type="button" class="btn btn-primary btn-cancel" hidden>Cancel</button>
         </form>
         
     </div>
